# substrafl

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.md  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  skaffold.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: main-check-310.yml  main-check-38.yml  main-check.yml  main-checy-39.yml  publish.yml  towncrier-changelog.yml  towncrier.yml  validate-pr.yml  windows-subprocess-check.yml
benchmark/camelyon/: .gitattributes  .gitignore  README.md  benchmark_metrics.py  benchmarks.py  benchmarks.sh  performances.py  plot_results.py  requirements.txt  weldon_fedavg.py  workflows.py
benchmark/camelyon/common/: benchmark_metrics.py  data_managers.py  dataset_manager.py  utils.py  weldon.py
benchmark/camelyon/connect_conf/: remote.yaml
benchmark/camelyon/data/: index.csv
benchmark/camelyon/pure_connectlib/: custom_torch_algo.py  register_assets.py
benchmark/camelyon/pure_substrafl/: register_assets.py
benchmark/camelyon/pure_torch/: strategies.py
benchmark/camelyon/substra_conf/: local.yaml  remote.yaml
changes/: 201.added  202.changed  204.changed  213.changed  223.added  227.added  228.fixed  229.fixed  230.fixed  231.fixed  241.changed  242.changed  244.fixed  245.fixed  248.changed  249.added  250.changed  252.fixed  256.fixed
charts/connectlib/: Chart.yaml  values.yaml
charts/connectlib/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
charts/substrafl/: Chart.yaml  values.yaml
charts/substrafl/templates/: _helpers.tpl  deployment.yaml
connectlib/: __init__.py  __version__.py  batch_indexer.py  dependency.py  evaluation_strategy.py  exceptions.py  experiment.py  logger.py  model_loading.py  orchestrator.py  schemas.py
connectlib/algorithms/: __init__.py  algo.py  algo_old.py  substra_utils.py
connectlib/algorithms/pytorch/: __init__.py  fed_avg.py  one_node.py  torch_base_algo.py  torch_fed_avg_algo.py  torch_newton_raphson_algo.py  torch_one_node_algo.py  torch_one_organization_algo.py  torch_scaffold_algo.py  torch_single_organization_algo.py  weight_manager.py
connectlib/index_generator/: __init__.py  base.py  np_index_generator.py
connectlib/nodes/: __init__.py  aggregation_node.py  node.py  register.py  test_data_node.py  train_data_node.py
connectlib/nodes/pointers/: __init__.py  aggregate.py  algo.py  local_state.py  remote_test.py  remote_train.py  shared_state.py
connectlib/nodes/references/: __init__.py  aggregate.py  algo.py  remote_test.py  (+2 more)
connectlib/operations/: __init__.py  aggregate.py  blueprint.py  remote_test.py  remote_test_data.py  remote_train.py  remote_train_data.py
connectlib/organizations/: __init__.py  aggregation_organization.py  organization.py  test_data_organization.py  train_data_organization.py
connectlib/remote/: __init__.py  connect_tools_methods.py  decorators.py  methods.py  operations.py  register.py  remote_struct.py
connectlib/specs/: node.py
connectlib/strategies/: __init__.py  ensemble.py  fed_avg.py  newton_raphson.py  one_node.py  one_organization.py  scaffold.py  single_organization.py  strategy.py
docker/connectlib-tests/: Dockerfile
docker/substrafl-tests/: Dockerfile
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/api/: algorithms.rst  compute_plan_builder.rst  dependency.rst  evaluation_strategy.rst  exceptions.rst  experiment.rst  index.rst  index_generator.rst  logger.rst  model_loading.rst  nodes.rst  organizations.rst  remote.rst  schemas.rst  strategies.rst
docs/contribute/: contribution_process.rst  mistakes.rst  technical_guide.rst
docs/get_started/: introduction_guide.rst
docs/python_api/: api.rst
docs/technical/: index.rst  task_execution.rst
examples/template/: README.MD  template.py
substrafl/: __init__.py  __version__.py  client.py  compute_plan_builder.py  constants.py  dependency.py  evaluation_strategy.py  exceptions.py  experiment.py  files.py  load.py  logger.py  model_loading.py  schemas.py
substrafl/algorithms/: __init__.py  algo.py
substrafl/analytics/: __init__.py  base_analytic.py  base_strategy.py  mean.py  variance.py
substrafl/dependency/: __init__.py  constants.py  manage_dependencies.py  path_management.py  schemas.py
substrafl/index_generator/: __init__.py  base.py  np_index_generator.py
substrafl/nodes/: __init__.py  aggregation_node.py  node.py  protocol.py  schemas.py  simu_nodes.py  test_data_node.py  train_data_node.py  utils.py
substrafl/remote/: __init__.py  connect_tools_methods.py  decorators.py  operations.py  remote_struct.py  substratools_methods.py
substrafl/simulation/: __init__.py  nodes.py  nodes_utils.py  schemas.py
substrafl/strategies/: __init__.py  fed_avg.py  fed_pca.py  newton_raphson.py  scaffold.py  schemas.py  single_organization.py  strategy.py
tests/: __init__.py  assets_factory.py  conftest.py  settings.py  test_batch_indexer.py  test_evaluation_strategy.py  test_experiment.py  test_logger.py  test_model_loading.py  test_strategies.py  utils.py
tests/algorithms/: test_algo.py
tests/analytics/: test-mean.py  test_mean.py  test_variance.py
tests/connect_conf/: ci.yaml  local.yaml  remote.yaml
tests/dependency/: local_code_file.py  test_dependency.py  test_dependency_path_management.py  test_local_dependencies_file_notebook.ipynb  test_manage_dependencies.py
tests/end_to_end/: end_2_end.py  test_end_2_end.py
tests/index_generator/: test_np_index_generator.py
tests/installable_library/: setup.py
tests/nodes/: test_schemas.py  test_test_data_node.py
tests/remote/: test_decorator.py  test_methods.py  test_register.py
tests/sdk/: data_factory.py  test_base.py
tests/strategies/: test_fed_avg.py  test_fed_pca.py  test_newton_raphson.py  test_scaffold.py  test_single_organization.py  test_strategy.py
tests/substra_conf/: ci.yaml  remote.yaml
tmp_substraflmlx2st_1/substrafl_internal/: cls_cloudpickle
(+78 files in other folders)
