[tool.poetry]
name = "connectlib"
version = "0.1.0"
description = "Federated Learning library"
authors = ["Olivier Dehaene <olivier.dehaene@owkin.com>"]
readme = "README.md"

homepage = "https://owkin-connectlib.readthedocs-hosted.com/en/latest/"
repository = "https://github.com/owkin/connectlib/"
documentation = "https://owkin-connectlib.readthedocs-hosted.com/en/latest/python_api.html"

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.7.0"
substra = "^0.9.0"
loguru = "^0.5.3"
substratools = "^0.7.0"
numpy = "^1.20.3"
cloudpickle = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pre-commit = "^2.13.0"

[[tool.poetry.source]]
name = "owkin"
url = "https://pypi.owkin.com"

[tool.black]
line-length = 95
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.github
  | \.git
  | \.mypy_cache
  | \.venv
  | \.dvc
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
