[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests*", "benchmark*"]

[tool.hatch.version]
path = "substrafl/__version__.py"

[project]
name = "substrafl"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "cloudpickle>=1.6.0",
    "substra~=1.0.0",
    "substratools~=1.0.0",
    "pydantic>=2.3.0,<3.0",
    "pip>=21.2",
    "tqdm",
    "wheel",
    "six",
    "packaging",
    "pip-tools",
]
keywords = ["substrafl"]
authors = [{ name = "Owkin, Inc." }]
license = { file = "LICENSE" }

description = """A high-level federated learning Python library to run
    federated learning experiments at scale on a Substra network"""
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12.0",
    "pytest-mock",
    "pre-commit>=2.13.0",
    "types-PyYAML>=6.0.0",
    "torch>=1.9.1,!=1.12.0", # bug in 1.12.0 (https://github.com/pytorch/pytorch/pull/80345)
    "nbmake>=1.4.3",
    "docker",
    "towncrier",
]

[project.urls]
Documentation = "https://docs.substra.org/en/stable/"
Repository = "https://github.com/Substra/substrafl"
Changelog = "https://github.com/Substra/substrafl/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
filter_files = true
force_single_line = true
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--durations=0"
markers = [
    "slow",        # mark test as slow.
    "substra",     # mark test as using substra.
    "docker_only", # mark test as only useful in remote and local docker mode
    "e2e",         # test run in the end-to-end tests with Substra
    "gpu",         # gpu tests, to run manually
]
filterwarnings = [
    "ignore:.*TestDataNode.*:pytest.PytestCollectionWarning",
    # ignore substra tools deprecation warning
    "ignore:.*imp module.*:DeprecationWarning",
]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/Substra/substrafl/releases/tag/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/Substra/substrafl/pull/{issue})"
[tool.towncrier.fragment.added]
[tool.towncrier.fragment.removed]
[tool.towncrier.fragment.changed]
[tool.towncrier.fragment.fixed]
